infra/infrastructure/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "argocd.flowforge.fun"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
