infra/infrastructure/loki-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-route
  namespace: logging
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "loki.flowforge.fun"
  rules:
  - backendRefs:
    - name: loki-gateway
      port: 80
