infra/infrastructure/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "prometheus.flowforge.fun"
  rules:
  - backendRefs:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
