infra/infrastructure/rollouts-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts-route
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "rollouts.flowforge.fun"
  rules:
  - backendRefs:
    - name: rollouts-dashboard
      port: 3100
